# firefly-coser-dataset

./: .gitignore  README.md  configs.py  filter_firefly_all.py  generate_tags.py  md2csv.py  optimize_tags.py  pyproject.toml  remove_wm.py  scrape_firefly_all.py  utils.py
csvs/: link_source1.csv  link_source1_non_video_filtered.csv
demark_world/: __init__.py  configs.py  core.py  watermark_cleaner.py  watermark_detector.py
demark_world/cleaner/: e2fgvi_hq_cleaner.py  lama_cleaner.py
demark_world/iopaint/: __init__.py  api.py  batch_processing.py  benchmark.py  cli.py  download.py  helper.py  model_manager.py  runtime.py  schema.py  web_config.py
demark_world/iopaint/model/: base.py  controlnet.py  fcf.py  instruct_pix2pix.py  kandinsky.py  lama.py  ldm.py  manga.py  mat.py  mi_gan.py  opencv2.py  paint_by_example.py  sd.py  sdxl.py  utils.py  zits.py
demark_world/iopaint/model/anytext/: anytext_model.py  anytext_pipeline.py  anytext_sd15.yaml
demark_world/iopaint/model/helper/: controlnet_preprocess.py
demark_world/iopaint/plugins/: anime_seg.py  base_plugin.py  gfpgan_plugin.py  interactive_seg.py  realesrgan.py  remove_bg.py  restoreformer.py
demark_world/iopaint/tests/: test_adjust_mask.py  test_anytext.py  test_brushnet.py  test_controlnet.py  test_instruct_pix2pix.py  test_load_img.py  test_low_mem.py  test_match_histograms.py  test_model.py  test_model_md5.py  test_model_switch.py  test_outpainting.py  test_paint_by_example.py  test_plugins.py  test_save_exif.py  test_save_quality.py  test_sd_model.py  test_sdxl.py  utils.py
demark_world/server/: app.py  db.py  lifespan.py  models.py  router.py  worker.py
demark_world/utils/: download_utils.py  watermark_utls.py
mds/: link_source1.md
notebooks/: filter_csv_links.ipynb
(+18 files in other folders)
